[project]
name = "llms"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "jupyterlab",
    "ipywidgets",
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "gensim",
    "torch",
    "transformers",
    "tqdm",
    "openai",
    "gradio",
    "langchain",
    "tiktoken",
    "faiss-cpu",
    "langchain-openai",
    "langchain_experimental",
    "langchain_chroma",
    "langchain[docarray]",
    "datasets",
    "sentencepiece",
    "google-generativeai",
    "anthropic",
    "unstructured",
    "chromadb",
    "plotly",
    "jupyter-dash",
    "beautifulsoup4",
    "pydub",
    "modal",
    "ollama",
    "accelerate",
    "psutil",
    "setuptools",
    "speedtest-cli",
    "sentence_transformers",
    "feedparser"
]
